k8s/storybook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storybook
  namespace: boilerplate
  labels:
    app: storybook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storybook
  template:
    metadata:
      labels:
        app: storybook
    spec:
      containers:
        - name: storybook
          image: PLACEHOLDER
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
