k8s/storybook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storybook
  namespace: boilerplate
  labels:
    app: storybook
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: storybook
