k8s/storybook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storybook
  namespace: boilerplate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - PLACEHOLDER
      secretName: storybook-tls
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storybook
                port:
                  number: 80
